accessed api to add club name, address and logo to page

--- a/indexepl.html
+++ b/indexepl.html
@@ -6,16 +6,17 @@
     </head>
     <body>
       <form>
-	      <input type="text" placeholder="What team do you want?"/>
-	      <input type="submit" value="Get Team" />
+	      <!-- <input type="text" placeholder="What team do you want?"/>
+	      <input type="submit" value="Get Team" /> -->
       </form>
 
-      <h1>EPL</h1>
-      <dl>
+      <h1>2020-'21 EPL</h1>
+      <div id="team-attributes"></div>
+      <!-- <dl>
 
 	       <dt>Team</dt>
 	       <dd id="team"></dd>
 
-      </dl>
+      </dl> -->
     </body>
 </html>
