--- a/matchesindex.html
+++ b/matchesindex.html
@@ -16,32 +16,17 @@
     <title></title>
   </head>
   <header>
-    <img src="https://i.pinimg.com/736x/28/d0/84/28d0845c88d5605f13cd2cf4a4f89270.jpg" alt="logo">
+    <img src="https://static.wikia.nocookie.net/logopedia/images/2/21/Premier_League_1992.svg/revision/latest/scale-to-width-down/340?cb=20200810034840" alt="logo">
     <h1>English Premier League Pick-em'</h1>
-    <!-- <button type="button" class="modal-btn">Modal</button> -->
-    <div class="modal-bg">
-     <div class="modal">
-      <h2></h2>
-      <label for="name">Name: </label>
-      <input type="text">
-      <label for="email">Email: </label>
-      <input type="email" name="email">
-      <button>Subscribe for more Match Info</button>
-      <span class="modal-close">X</span>
-     </div>
-    </div>
   <body>
-    <div class="container">
-        <div id="match">
-        <h3 id="home">Home</h3>
-        <h3 id="away">Away</h3>
-         <h3>Match Day</h3>
-        <h4>Winning Odds:</h4>
-        <p>Home, Away, Draw
-          <p>odds</p>
-        <h4>Place Your Bet:</h4>
-        <button class="button" id="homebtn">Home Team</button>
-        <button class="button" id="awaybtn">Away Team</button>
-    </div>
-    </div>
+    <!-- <div id="carousel">
+      <figure>
+        <img src="img/ogpllogo.jpg" alt="og">
+        <img src="img/pllogo2.jpg" alt="2">
+        <img src="img/currentpl.jpeg" alt="current">
+        <img src="img/EPL-Trophyjpg.jpeg" alt="trophy">
+        <img src="img/ogpllogo.jpg" alt="og">
+      </figure>
+    </div> -->
+    <div class="container"></div>
 </html>
