--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title></title>
   </head>
   <header>
-    <img src="https://static.wikia.nocookie.net/logopedia/images/2/21/Premier_League_1992.svg/revision/latest/scale-to-width-down/340?cb=20200810034840" alt="logo">
+    <img src="https://i.pinimg.com/originals/dd/a2/4e/dda24eebc5310358157ee51927d4bd66.jpg" alt="logo">
     <h1>English Premier League Pick-em'</h1>
   <body>
     <!-- <div id="carousel">
