re added header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
     <img src="https://i.pinimg.com/originals/dd/a2/4e/dda24eebc5310358157ee51927d4bd66.jpg" alt="logo">
     <h1>English Premier League Pick-em'</h1>
+    <header>
   <body>
     <!-- <div id="carousel">
       <figure>
