--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <script src="matches.js" charset="utf-8"></script>
     <title></title>
   </head>
+  <header>
     <img src="https://i.pinimg.com/originals/dd/a2/4e/dda24eebc5310358157ee51927d4bd66.jpg" alt="logo">
     <h1>English Premier League Pick-em'</h1>
-    <header>
+</header>
   <body>
     <!-- <div id="carousel">
       <figure>
